# budget

./: .gitignore  Cargo.toml  README.md  create_tables.sql
.github/workflows/: test.yml
src/: entrypoints.rs  lib.rs  main.rs  views.rs
src/adapters/: repository.rs
src/cli/: cli_args.rs
src/domain/: models.rs
src/entrypoints/: cli_entrypoints.rs
src/services/: handlers.rs
